fix positioning being broken in some browsers
Notably on Firefox.

--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,9 @@
 @import "themes/default.css";
 
 body {
+	height: 100vh;
 	display: flex;
+	overflow:hidden;
 	align-items: center;
 	background: var(--bg);
 	justify-content: center;
